--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.468.0",
-    "next": "15.1.0",
+    "next": "^15.3.4",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
